--- a/themes/InterDead/layouts/partials/footer.html
+++ b/themes/InterDead/layouts/partials/footer.html
@@ -40,6 +40,13 @@
             rel="noopener"
             >Discord</a
           >
+          <a
+            class="gm-footer__link"
+            href="https://t.me/InterDeadCom"
+            target="_blank"
+            rel="noopener"
+            >Telegram</a
+          >
         </div>
         <div class="gm-footer__linkGroup">
           <span class="gm-footer__linkLabel">{{ i18n "footer.links.legal" }}</span>
