--- a/themes/InterDead/layouts/partials/footer.html
+++ b/themes/InterDead/layouts/partials/footer.html
@@ -40,11 +40,7 @@
             rel="noopener"
             >Discord</a
           >
-          <a
-            class="gm-footer__link"
-            href="https://t.me/InterDeadCom"
-            target="_blank"
-            rel="noopener"
+          <a class="gm-footer__link" href="https://t.me/InterDeadCom" target="_blank" rel="noopener"
             >Telegram</a
           >
         </div>
