--- a/themes/InterDead/layouts/partials/components/category-list.html
+++ b/themes/InterDead/layouts/partials/components/category-list.html
@@ -5,8 +5,10 @@ dict "mini-games" (i18n "categories.miniGames") "meta-universe" (i18n "categorie
   <span class="gm-categories__label">{{ . }}</span>
   {{- end }}
   <div class="gm-categories__list">
-    {{- range $categories }} {{- $label := index $labels . | default . -}}
-    <span class="gm-categories__item">{{ $label }}</span>
+    {{- range $categories }} {{- $label := index $labels . | default . -}} {{- $categoryPage :=
+    site.GetPage (printf "categories/%s" .) -}} {{- $href := cond (ne $categoryPage nil)
+    $categoryPage.RelPermalink (relURL (printf "/categories/%s/" .)) -}}
+    <a class="gm-categories__item" href="{{ $href }}">{{ $label }}</a>
     {{- end }}
   </div>
 </div>
