--- a/themes/InterDead/layouts/partials/head.html
+++ b/themes/InterDead/layouts/partials/head.html
@@ -10,16 +10,19 @@
 {{- $favicon32 := resources.Get "favicons/favicon-32x32.png" | fingerprint -}}
 {{- $favicon16 := resources.Get "favicons/favicon-16x16.png" | fingerprint -}}
 {{- $siteManifest := resources.Get "favicons/site.webmanifest" | fingerprint -}}
-{{- $imageIsRemote := and $image (hasPrefix $image "http") -}}
-{{- $ogImage := "" -}}
-{{- if $image -}}
-  {{- if $imageIsRemote -}}
-    {{- $ogImage = $image -}}
+{{- $convertedAssetsDir := "converted-assets" -}}
+{{- $resolvedImage := partial "helpers/resolve-image.html" (dict "page" . "path" $image "convertedDir" $convertedAssetsDir) -}}
+{{- $ogImage := $resolvedImage.url -}}
+{{- if and (not $ogImage) $logo -}}
+  {{- $ogImage = $logo.RelPermalink -}}
+{{- end -}}
+{{- $ogImageAbsolute := "" -}}
+{{- if $ogImage -}}
+  {{- if hasPrefix $ogImage "http" -}}
+    {{- $ogImageAbsolute = $ogImage -}}
   {{- else -}}
-    {{- $ogImage = $image | absURL -}}
+    {{- $ogImageAbsolute = $ogImage | absURL -}}
   {{- end -}}
-{{- else if $logo -}}
-  {{- $ogImage = $logo.Permalink -}}
 {{- end -}}
 <!DOCTYPE html>
 <html lang="{{ $lang }}">
@@ -39,7 +42,7 @@
     <meta property="og:type" content="{{ $ogType }}" />
     <meta property="og:title" content="{{ $title }}" />
     <meta property="og:url" content="{{ $canonical }}" />
-    {{- with $ogImage }}
+    {{- with $ogImageAbsolute }}
     <meta property="og:image" content="{{ . }}" />
     <meta name="twitter:image" content="{{ . }}" />
     {{- end }}
