--- a/themes/InterDead/layouts/partials/head.html
+++ b/themes/InterDead/layouts/partials/head.html
@@ -10,23 +10,17 @@
 {{- $favicon32 := resources.Get "favicons/favicon-32x32.png" | fingerprint -}}
 {{- $favicon16 := resources.Get "favicons/favicon-16x16.png" | fingerprint -}}
 {{- $siteManifest := resources.Get "favicons/site.webmanifest" | fingerprint -}}
-{{- $imagePath := $image -}}
-{{- $cleanPath := cond (and $imagePath (hasPrefix $imagePath "/")) (strings.TrimPrefix "/" $imagePath) $imagePath -}}
-{{- $convertedPath := cond $cleanPath (printf "converted-assets/%s" $cleanPath) "" -}}
-{{- $imageResource := cond (and $cleanPath (not (hasPrefix $cleanPath "http"))) (or (resources.GetMatch $convertedPath) (resources.GetMatch $cleanPath) (.Resources.GetMatch $convertedPath) (.Resources.GetMatch $cleanPath)) nil -}}
+{{- $imageIsRemote := and $image (hasPrefix $image "http") -}}
 {{- $ogImage := "" -}}
-{{- if $imageResource -}}
-  {{- $ogImage = ($imageResource | fingerprint).RelPermalink -}}
-{{- else if $imagePath -}}
-  {{- if hasPrefix $imagePath "http" -}}
-    {{- $ogImage = $imagePath -}}
+{{- if $image -}}
+  {{- if $imageIsRemote -}}
+    {{- $ogImage = $image -}}
   {{- else -}}
-    {{- $ogImage = $imagePath | absURL -}}
+    {{- $ogImage = $image | absURL -}}
   {{- end -}}
 {{- else if $logo -}}
   {{- $ogImage = $logo.Permalink -}}
 {{- end -}}
-{{- $ogImageAbsolute := cond (and $ogImage (not (hasPrefix $ogImage "http"))) ($ogImage | absURL) $ogImage -}}
 <!DOCTYPE html>
 <html lang="{{ $lang }}">
   <head>
@@ -45,7 +39,7 @@
     <meta property="og:type" content="{{ $ogType }}" />
     <meta property="og:title" content="{{ $title }}" />
     <meta property="og:url" content="{{ $canonical }}" />
-    {{- with $ogImageAbsolute }}
+    {{- with $ogImage }}
     <meta property="og:image" content="{{ . }}" />
     <meta name="twitter:image" content="{{ . }}" />
     {{- end }}
